--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
+    "electron": "^4.0.5",
     "eslint": "5.3.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -19,8 +20,15 @@
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4"
   },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "scripts": {
     "format": "prettier --write 'main/**/*.{js,json}'",
     "format-lint": "./node_modules/eslint/bin/eslint.js . --fix"
+  },
+  "dependencies": {
+    "electron-is-dev": "^1.0.1"
   }
 }
