--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4"
   },
+  "dependencies": {
+    "app-root-path": "^2.1.0",
+    "dotenv": "6.2.0",
+    "electron-is-dev": "^1.0.1",
+    "electron-log": "^3.0.1",
+    "electron-util": "^0.11.0",
+    "fix-path": "^2.1.0",
+    "menubar": "^5.2.3"
+  },
   "prettier": {
     "semi": false,
     "singleQuote": true
   },
   "scripts": {
+    "start": "electron main/index.js",
     "format": "prettier --write 'main/**/*.{js,json}'",
     "format-lint": "./node_modules/eslint/bin/eslint.js . --fix"
-  },
-  "dependencies": {
-    "electron-is-dev": "^1.0.1"
   }
 }
