--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coountdown",
   "version": "1.0.0",
   "description": "Coountdown for macOS",
-  "main": "index.js",
+  "main": "main/index.js",
   "repository": "https://github.com/vistriter/coountdown.git",
   "author": "vistriter <vistriter@gmail.com>",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
+    "@sentry/node": "4.6.1",
     "app-root-path": "^2.1.0",
     "dotenv": "6.2.0",
     "electron-is-dev": "^1.0.1",
@@ -34,7 +35,7 @@
     "singleQuote": true
   },
   "scripts": {
-    "start": "electron main/index.js",
+    "start": "electron .",
     "format": "prettier --write 'main/**/*.{js,json}'",
     "format-lint": "./node_modules/eslint/bin/eslint.js . --fix"
   }
