--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "electron-log": "^3.0.1",
     "electron-util": "^0.11.0",
     "fix-path": "^2.1.0",
-    "menubar": "^5.2.3"
+    "menubar": "^5.2.3",
+    "mixpanel": "^0.10.1",
+    "moment": "^2.24.0",
+    "node-machine-id": "^1.1.10"
   },
   "prettier": {
     "semi": false,
