--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "coountdown",
+  "productName": "Coountdown",
   "version": "1.0.0",
   "description": "Coountdown for macOS",
   "main": "main/index.js",
@@ -11,6 +12,7 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
     "electron": "^4.0.5",
+    "electron-builder": "^20.38.5",
     "eslint": "5.3.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -49,9 +51,28 @@
       "pre-commit": "lint-staged"
     }
   },
+  "build": {
+    "buildVersion": "0",
+    "appId": "com.coountdown.app",
+    "mac": {
+      "category": "public.app-category.productivity",
+      "icon": "main/static/icons/icon.icns",
+      "target": [
+        "zip"
+      ],
+      "extendInfo": {
+        "LSUIElement": 1,
+        "NSUserNotificationAlertStyle": "alert"
+      }
+    },
+    "files": [
+      "**/*"
+    ]
+  },
   "scripts": {
     "start": "electron .",
     "format": "prettier --write 'main/**/*.{js,json}'",
-    "format-lint": "./node_modules/eslint/bin/eslint.js . --fix"
+    "format-lint": "./node_modules/eslint/bin/eslint.js . --fix",
+    "build": "build"
   }
 }
