--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ cache:
 environment:
   matrix:
     - nodejs_version: 10
+  GH_TOKEN:
+    secure: NOoKKL7ILtkNaaJmZVEbbl9X4zND5YGw3s5h0V+qdvQGSJi1tZI5OvNYS9OzzBa9
 
 install:
   - ps: Install-Product node $env:nodejs_version
