--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "6.2.0",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^3.0.1",
+    "electron-updater": "^4.0.6",
     "electron-util": "^0.11.0",
     "fix-path": "^2.1.0",
     "menubar": "^5.2.3",
