--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coountdown",
   "productName": "Coountdown",
-  "version": "1.0.2",
+  "version": "1.1.0-canary.0",
   "description": "Coountdown for macOS",
   "main": "main/index.js",
   "repository": "https://github.com/coountdown/coountdown.git",
@@ -39,7 +39,8 @@
     "menubar": "^5.2.3",
     "mixpanel": "^0.10.1",
     "moment": "^2.24.0",
-    "node-machine-id": "^1.1.10"
+    "node-machine-id": "^1.1.10",
+    "semver": "^5.6.0"
   },
   "prettier": {
     "semi": false,
@@ -48,7 +49,6 @@
   "lint-staged": {
     "*.js": [
       "eslint --fix",
-      "prettier --write",
       "git add"
     ]
   },
