--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ cache:
   yarn: true
   directories:
     - node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
 
 script:
   - yarn dist
