--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coountdown",
   "productName": "Coountdown",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Coountdown for macOS",
   "main": "main/index.js",
   "repository": "https://github.com/coountdown/coountdown.git",
@@ -64,7 +64,8 @@
       "category": "public.app-category.productivity",
       "icon": "main/static/icons/icon.icns",
       "target": [
-        "zip"
+        "zip",
+        "dmg"
       ],
       "extendInfo": {
         "LSUIElement": 1,
