--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coountdown",
   "productName": "Coountdown",
-  "version": "1.1.16",
+  "version": "1.2.0",
   "description": "Coountdown for macOS",
   "main": "main/index.js",
   "repository": "https://github.com/coountdown/coountdown.git",
@@ -58,6 +58,8 @@
     }
   },
   "build": {
+    "productName": "Coountdown",
+    "artifactName": "Coountdown.${ext}",
     "buildVersion": "0",
     "appId": "com.coountdown.desktop",
     "mac": {
