--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coountdown",
   "productName": "Coountdown",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Coountdown for macOS",
   "main": "main/index.js",
   "repository": "https://github.com/coountdown/coountdown.git",
@@ -35,6 +35,7 @@
     "electron-log": "^3.0.1",
     "electron-updater": "^4.0.6",
     "electron-util": "^0.11.0",
+    "first-run": "^1.2.0",
     "fix-path": "^2.1.0",
     "menubar": "^5.2.3",
     "mixpanel": "^0.10.1",
